--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS1 ExamProject</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon">
-    <script src="javascript/main.js" defer></script>
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <script src="javascript/main.js" type="module"></script>
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body></body>
