fixed show movies and made search work
fixed so that popular and top rated movies only show 10. Also set up search so it works but only shows info in console

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
     <script src="javascript/main.js" type="module"></script>
     <link rel="stylesheet" href="style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <form>
+      <label for="searchInput">Search:</label>
+      <input type="search" name="searchInput" id="searchInput" />
+      <input
+        type="button"
+        name="searchButton"
+        id="searchButton"
+        value="search"
+      />
+    </form>
+  </body>
 </html>
