added option to search
need to redesign the website and how it functions

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
         value="search"
       />
     </form>
-    <div class="movies_container">
-
-    </div>
+    <div class="search_result" id="searchResult"></div>
   </body>
 </html>
