--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </form>
       </div>
     </nav>
-    <div id="searchErrorMessage"></div>
+    <div id="searchErrorMessage" class="search_error_message"></div>
     <div class="search_result_not_active" id="searchResult"></div>
   </body>
 </html>
