--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS1 ExamProject</title>
     <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <script src="anime.js/anime.min.js"></script>
     <script src="javascript/main.js" type="module"></script>
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
     <nav class="navigation_bar">
-      <h1>Not IMDB</h1>
+      <h1 class="title">Not IMDB</h1>
+      <p><a href="index.html#popularMovies">Popular Movies</a></p>
+      <p><a href="index.html#topRatedMovies">Top Rated Movies</a></p>
       <div>
         <form>
           <label for="searchInput">Search:</label>
